# ai-agent-nas

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  init.sh  init.sql  test_flask_db.sh  群晖部署说明.md
n8n-service/: .dockerignore  .env.template  .gitignore  .pylintrc  Dockerfile  README.md  db.py  main.py  playground.py  pyproject.toml  sap_parser.py
n8n-service/tests/: test_add_index.py  test_db.py  test_db_integration.py  test_parse_sap_sheet_endpoint.py  test_sap_parser.py
